# quoting-tool

./: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  pyproject.toml  setup.py  start.bat  start.sh  tox.ini
.claude/: launch.json
backend/: calculations.py  database.py  excel_fix.py  excel_inspect.py  excel_verify.py  export_forecasts.py  main.py  quote_tool.db  verify_math.py
docs/source/: conf.py  index.rst  python_template.rst
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: NumInput.tsx  PartForm.tsx  ProjectForm.tsx  QuotePDFContent.tsx  QuoteView.tsx
frontend/src/pages/: Home.tsx  ProjectPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: manufacturing.ts
python_template/: __init__.py  docker-compose.yml  some_module.py
tests/: test_some_module.py
